[package]
name = "ratatypst-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ratatui = { version = "0.30", default-features = false }
unicode-width = "0.2"
wasm-minimal-protocol = "0.2"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
