[workspace]
resolver = "3"
members = ["ratatypst-core", "examples/*"]

[workspace.dependencies]
ratatui = { version = "0.30", default-features = false }
ratatypst-core.path = "ratatypst-core"
unicode-width = "0.2"
wasm-minimal-protocol = "0.2"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
